--- a/index.html
+++ b/index.html
@@ -8,23 +8,36 @@
 </head>
 <body>
 
-    <button id="openModalBtn">Ouvrir le Modal</button>
-
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" id="closeModalBtn">&times;</span>
-            <img src="images/image 11.png" alt="Image in Modal">
-        </div>
-    </div>
+    
     <div class="haut">
-        <img class="imgsda1" src="images/sda1/image 29 1.png" alt="">
+        <div class="lesda">
+            <img class="imgsda" src="images/sda1/image 29 1.png" alt="">
+            <!-- <div class="lesda1">
+                <p class="titre1"> La Communauté de l’anneau  </p>
+                <p class="titre2"> images du film cliquez ici </p>
+            </div> -->
+        </div>
         <p class="titre">Le Seigneur des Anneaux</p>
     </div>
-    <div class="bas">
-        <img class="imgsda2" src="images/sda2/image 31 1.png" alt="">
-        <img class="imgsda3" src="images/sda3/image 32 1.png" alt="">
-    </div>
 
-    <script src="script.js"></script>
+    <div class="bas">
+        <div class="lesda">
+            <img class="imgsda" src="images/sda2/image 31 1.png" alt="">
+            <!-- <div class="lesda2">
+                <p class="titre1"> Les Deux Tours </p>
+                <p class="titre2"> images du film cliquez ici </p>
+            </div> -->
+        </div>
+        <div class="lesda">
+            <img class="imgsda" src="images/sda3/image 32 1.png" alt="">
+            <!-- <div class="lesda3">
+                <p class="titre1"> Le Retour du Roi  </p>
+                <p class="titre2"> images du film cliquez ici </p>
+            </div> -->   
+        </div>
+    </div>   
+    
+    <script src="scripts.js"></script>
+
 </body>
 </html>
