--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
     <div class="haut">
         <div class="lesda">
             <img class="imgsda" src="images/sda1/image 29 1.png" alt="">
-            <div class="lesda1">
-                <p class="titre1"> La Communauté de l’anneau  </p>
-                <p class="titre2"> images du film cliquez ici </p>
+            <div class="lesda1"> 
+                    <img class="img2" src="images/sda1/image 2.png" alt="">
+                    <p class="titre1"> La Communauté de l’anneau  </p>
+                    <p class="titre2"> images du film cliquez ici </p>
             </div>
-        </div>
-        
+        </div>  
     </div>
-
     <div class="bas">
         <div class="lesda">
             <img class="imgsda" src="images/sda2/image 31 1.png" alt="">
-            <div class="lesda2">
-                <p class="titre1"> Les Deux Tours </p>
+            <div class="lesda1">
+                <img class="img2" src="images/sda2/image 3.png" alt="">
+                <p class="titre11"> Les Deux Tours </p>
                 <p class="titre2"> images du film cliquez ici </p>
             </div> 
         </div> 
         <div class="lesda">
             <img class="imgsda" src="images/sda3/image 32 1.png" alt="">
-            <div class="lesda3">
-                <p class="titre1"> Le Retour du Roi  </p>
+            <div class="lesda1">
+                <img class="img2" src="images/sda3/image 4.png" alt="">
+                <p class="titre11"> Le Retour du Roi  </p>
                 <p class="titre2"> images du film cliquez ici </p>
             </div>  
         </div>
