--- a/index2.html
+++ b/index2.html
@@ -7,15 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="openModalBtn">Ouvrir le Modal</button>
-
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" id="closeModalBtn">&times;</span>
-            <img src="images/image 11.png" alt="Image in Modal">
+    <p class="titre">Le Seigneur des Anneaux</p>
+    
+    <div class="haut">
+        <div class="lesda">
+            <img class="imgsda" src="images/sda1/image 29 1.png" alt="">
+            <div class="lesda1"> 
+                <img class="img2" src="images/sda1/image 2.png" alt="" onclick="openModal()">
+                <p class="titre1"> La Communauté de l’anneau  </p>
+                <p class="titre2"> images du film cliquez ici </p>
+            </div>
         </div>
     </div>
-    
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+            <!-- Ajoutez ici vos images à faire défiler -->
+            <img src="images/image 11.png" alt="">
+            <img src="images/image 1.png" alt="">
+            <img src="images/sda1/image3.jpg" alt="">
+            <!-- Ajoutez autant d'images que nécessaire -->
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
+
+
