--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 
-    <p class="titre">Le Seigneur des Anneaux</p>
+    <h1 class="titre">Le Seigneur des Anneaux</h1>
+    <div class="texte">
+        <p class="accroche"> « Un Anneau pour les gouverner tous. Un Anneau pour les trouver. Un Anneau pour les amener tous et dans les ténèbres les lier »</p>
+        <p class="accroche2">« Ash nazg durbatulûk, ash nazg gimbatul,Ash nazg thrakatulûk agh burzum-ishi krimpatul »</p>
+    </div>
+
     
-    <div class="haut">
+    <div class="bas">
         <div class="lesda">
             <img class="imgsda" src="images/sda1/image 29 1.png" alt="">
             <div class="lesda1"> 
@@ -18,9 +23,7 @@
                     <p class="titre1"> La Communauté de l’anneau  </p>
                     <p class="titre2"> images du film cliquez ici </p>
             </div>
-        </div>  
-    </div>
-    <div class="bas">
+        </div> 
         <div class="lesda">
             <img class="imgsda" src="images/sda2/image 31 1.png" alt="">
             <div class="lesda1">
