--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>le Seigneur des Anneaux</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="film">
@@ -78,7 +78,7 @@
       </div>
     
     
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
