le seigneur des anneaux

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="film">
+
+<div class="film" id="accueil">
     <h1 class="titre">Le Seigneur des Anneaux</h1>
     <div class="texte">
         <p class="accroche"> « Un Anneau pour les gouverner tous. Un Anneau pour les trouver. Un Anneau pour les amener tous et dans les ténèbres les lier »</p>
@@ -19,7 +20,7 @@
             <div class="lesda1"> 
                     <img class="img2" src="images/sda1/image 2.png" alt="">
                     <p class="titre1"> La Communauté de l’anneau  </p>
-                    <p class="titre2"> images du film cliquez ici </p>
+                    <p class="titre2" id="clique1"> images du film cliquez ici </p>
             </div>
         </div> 
         <div class="lesda">
@@ -27,7 +28,7 @@
             <div class="lesda1">
                 <img class="img2" src="images/sda2/image 3.png" alt="">
                 <p class="titre11"> Les Deux Tours </p>
-                <p class="titre2"> images du film cliquez ici </p>
+                <p class="titre2" id="clique2"> images du film cliquez ici </p>
             </div> 
         </div> 
         <div class="lesda">
@@ -35,47 +36,50 @@
             <div class="lesda1">
                 <img class="img2" src="images/sda3/image 4.png" alt="">
                 <p class="titre11"> Le Retour du Roi  </p>
-                <p class="titre2"> images du film cliquez ici </p>
+                <p class="titre2" id="clique3"> images du film cliquez ici </p>
             </div>  
         </div>
     </div> 
 </div>
 
-    <div class="film">
+<div class="film" id="le1">
         <h1 class="titre">Le Seigneur des Anneaux</h1> 
         <div class="filmlca">
             <div id="caroussel">
                 <div id="container">
                 </div>
+                <span class="close" id="closeModal">&times;</span>
                 <img src="../images/fleched.png" class="fleche" id="d" >
                 <img src="../images/fleched.png" class="fleche" id="g" >
                 </div>
         </div>
-    </div>
+</div>
 
-      <div class="film">
+<div class="film" id="le2">
         <h1 class="titre">Le Seigneur des Anneaux</h1> 
         <div class="filmlca">
             <div id="caroussel">
                 <div id="container2">
                 </div>
+                <span class="close" id="closeModal2">&times;</span>
                 <img src="../images/fleched.png" class="fleche" id="dr" >
                 <img src="../images/fleched.png" class="fleche" id="ga" >
                 </div>
             </div> 
-        </div>
+</div>
 
-      <div class="film">
+<div class="film" id="le3">
         <h1 class="titre">Le Seigneur des Anneaux</h1> 
         <div class="filmlca">
             <div id="caroussel">
                 <div id="container3">
                 </div>
+                <span class="close" id="closeModal3">&times;</span>
                 <img src="../images/fleched.png" class="fleche" id="dro" >
                 <img src="../images/fleched.png" class="fleche" id="gau" >
                 </div>
         </div>
-      </div>
+</div>
     
     
     <script src="script.js"></script>
