--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div id="container">
                 </div>
                 <span class="close" id="closeModal">&times;</span>
-                <img src="../images/fleched.png" class="fleche" id="d" >
-                <img src="../images/fleched.png" class="fleche" id="g" >
+                <img src="images/fleched.png" class="fleche" id="d" >
+                <img src="images/fleched.png" class="fleche" id="g" >
                 </div>
         </div>
 </div>
@@ -62,8 +62,8 @@
                 <div id="container2">
                 </div>
                 <span class="close" id="closeModal2">&times;</span>
-                <img src="../images/fleched.png" class="fleche" id="dr" >
-                <img src="../images/fleched.png" class="fleche" id="ga" >
+                <img src="images/fleched.png" class="fleche" id="dr" >
+                <img src="images/fleched.png" class="fleche" id="ga" >
                 </div>
             </div> 
 </div>
@@ -75,8 +75,8 @@
                 <div id="container3">
                 </div>
                 <span class="close" id="closeModal3">&times;</span>
-                <img src="../images/fleched.png" class="fleche" id="dro" >
-                <img src="../images/fleched.png" class="fleche" id="gau" >
+                <img src="images/fleched.png" class="fleche" id="dro" >
+                <img src="images/fleched.png" class="fleche" id="gau" >
                 </div>
         </div>
 </div>
